--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-inverse navbar-default" role="navigation">
+<nav class="navbar navbar-static-top navbar-default" role="navigation">
   <div class="container">
-  <!-- Brand and toggle get grouped for better mobile display -->
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -18,5 +18,5 @@
         <li><%= link_to "About", about_path %></li> 
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /"container" -->
+  </div><!-- /.container -->
 </nav>
